# xbox-webapi-python

./: pyproject.toml
src/pythonxbox/api/provider/people/: __init__.py  models.py
tests/: test_people.py
tests/data/responses/: people_friends_by_xuid_v5.json
