[project]
name = "python-xbox"
description = "A library to authenticate with Xbox Network and use their API"
authors = [
    {name = "Manfred Dennerlein Rodelo", email = "manfred@dennerlein.name"},
]
dependencies = [
    "ecdsa>=0.19",
    "httpx>=0.25.1",
    "ms_cv>=0.1.1",
    "pydantic>=2.12",
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = ["xbox one live api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/tr4nt0r/python-xbox"

[project.optional-dependencies]
cli = [
    "platformdirs>=4.5.0"
]

[project.scripts]
xbox-authenticate = "pythonxbox.scripts.authenticate:main"
xbox-change-gt = "pythonxbox.scripts.change_gamertag:main"
xbox-friends = "pythonxbox.scripts.friends:main"
xbox-searchlive = "pythonxbox.scripts.search:main"
xbox-xal = "pythonxbox.scripts.xal:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP", "S", "ANN", "C4", "I", "RUF", "SIM", "PLR", "ERA", "RET", "B", "A"]
# select = ["ALL"]
ignore = ["ANN003", "ANN401", "D", "COM"]


[tool.ruff.lint.per-file-ignores]
"**/scripts/*" = ["UP", "S104"]
"tests/*" = ["S101", "PLR2004"]
"src/pythonxbox/authentication/xal.py" = ["S101"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["pythonxbox"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "src/pythonxbox/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/pythonxbox",
]
[tool.hatch.build.targets.wheel]
packages = ["src/pythonxbox"]

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
    "platformdirs==4.9.2",
    "ecdsa==0.19.1",
    "httpx==0.28.1",
    "ms_cv==0.1.1",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "freezegun==1.5.5",
    "respx~=0.22",
]

[tool.hatch.envs.hatch-test]
parallel = true
extra-dependencies = [
  "pytest-cov~=7.0",
  "pytest-asyncio~=1.1",
  "respx~=0.22",
  "freezegun==1.5.5"
]
extra-args = ["--cov=src/", "--cov-report=term-missing", "--cov-report=xml", "-vv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.13", "3.12", "3.11"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
    "ruff==0.15.1",
]
config-path = "none"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs-material==9.7.1",
    "mkdocstrings[python]==1.0.3",
]
[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"
